<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/model_overview_labels_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/model_overview_name_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/model_name"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:id="@+id/model_overview_dimensions_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/model_dimensions"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/model_overview_values_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/model_overview_labels_row">

                <TextView
                    android:id="@+id/model_overview_name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Small" />

                <TextView
                    android:id="@+id/model_overview_dimensions_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Small" />
            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/model_overview_predict_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/predict_labels" />

                <TextView
                    android:id="@+id/model_overview_classification_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/model_overview_ground_truth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ground_truth" />

            <TextView
                android:id="@+id/model_overview_ground_truth_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/model_overview_top1_accuracy_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_1_acc" />

            <TextView
                android:id="@+id/model_overview_top1_accuracy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/model_overview_top5_accuracy_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_5_acc" />

            <TextView
                android:id="@+id/model_overview_top5_accuracy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </android.support.v7.widget.CardView>

        <GridView
            android:id="@+id/model_image_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawSelectorOnTop="true"
            android:focusable="true"
            android:horizontalSpacing="0dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_test"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp" />
</android.support.constraint.ConstraintLayout>
